[package]
name = "crawl-4ai-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
html2text = "0.2"
url = "2.4"
futures = "0.3"
kuchiki = "0.8.1"
rust-stemmers = "1.2.0"

[dev-dependencies]
wiremock = "0.6.5"
