[package]
name = "crawl-4ai-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
html2text = "0.2"
url = "2.4"
futures = "0.3"
kuchiki = "0.8.1"
rust-stemmers = "1.2.0"
regex = "1.12.2"
rig-core = "0.28.0"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
base64 = "0.21"

[[bin]]
name = "crawl4ai"
path = "src/main.rs"

[dev-dependencies]
wiremock = "0.6.5"
